# TODO-List

./: .env.sample  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml
src/: main.py  pytest.ini
src/app/: config.py  database.py  dependencies.py
src/app/tasks/: models.py  router.py
src/tests/: conftest.py
src/tests/tasks/: test_tasks.py
